n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "500Mi"
            limits:
              memory: "1000Mi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
          livenessProbe:  # This part should be within the container specification
            httpGet:
              path: /healthz # Replace with your actual health check endpoint if different
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:  # This part should be within the container specification
            httpGet:
              path: /healthz  # Replace with your actual health check endpoint if different
              port: 5678
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: n8n-secret
          secret:
            secretName: n8n-secret
        - name: postgres-secret
          secret:
            secretName: postgres-secret
