n8n-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  type: NodePort
  ports:
    - name: "n8nport"
      port: 5678
      targetPort: 5678
      # nodePort: 30007  # Optional: specify a port or omit this line to let Kubernetes assign one
  selector:
    service: n8n
